# haskell-git-examples

./: README.md  git-branch-diff-example.cabal  haskell-git-examples.cabal  stack.yaml
src/: Main.hs
