name:                haskell-git-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ketzacoatl/haskell-git-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Ketzacoatl
maintainer:          example@example.com
copyright:           2021 Ketzacoatl
category:            Cli
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-git-examples
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , git
                     , system-filepath
